css/style.css
*, *:before, *:after {
  box-sizing: border-box;
}

body {
  background-color: #333;
  font-family: sans-serif;
  font-size: 10px;
}

.container {
  margin: 0 auto;
  width: 420px;
}

nav {
  margin: 0 auto;
  padding: 10px 0 15px 15px;
  position: fixed;
  width: 420px;
  background-color: black;
}

.restaurant-list {
  padding-top: 50px;
  background-color: lightgray;
}

.location {
  border-bottom-style: solid;
  border-color: #8c8c8c;
  border-width: .85px;
}

.location:hover {
  background-color: #b2b2b2;
}

.location:nth-child(10) {
  border-bottom-style: none;
}

h1 {
  font-size: 1.8em;
  font-weight: bold;
  padding-bottom: 5px;
}

h3 {
  font-size: 1.4em;
}

.content {
  display: inline-block;
  width: 80%;
  padding: 20px;
}

.arrow {
  float: right;
  padding: 30px 10px 0px 0px;
}

.arrow-left {
  padding-top: 5px;
}

